--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1"
+    "babel-preset-react": "^6.11.1",
+    "react-treebeard": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
